--- a/chess.ipynb
+++ b/chess.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Работу выполнил Серафим Иванов 0382"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Датасет: https://www.kaggle.com/datasets/datasnaek/chess\n",
+    "\n",
+    "Задача: предсказание победителя"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -161,16 +177,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# проверим на нули\n",
-    "#TODO"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -214,7 +220,7 @@
    ],
    "source": [
     "# Correlation Matrix formation\n",
-    "corr_matrix = df.corr(numeric_only = True);\n",
+    "corr_matrix = df.corr(numeric_only = True)\n",
     "#print(corr_matrix)\n",
     "sn.heatmap(corr_matrix, annot=True)"
    ]
@@ -1130,7 +1136,7 @@
        "      <td>2</td>\n",
        "      <td>1500</td>\n",
        "      <td>1191</td>\n",
-       "      <td>25</td>\n",
+       "      <td>340</td>\n",
        "      <td>5</td>\n",
        "      <td>15</td>\n",
        "      <td>2</td>\n",
@@ -1144,7 +1150,7 @@
        "      <td>1</td>\n",
        "      <td>1322</td>\n",
        "      <td>1261</td>\n",
-       "      <td>159</td>\n",
+       "      <td>339</td>\n",
        "      <td>4</td>\n",
        "      <td>5</td>\n",
        "      <td>10</td>\n",
@@ -1158,7 +1164,7 @@
        "      <td>2</td>\n",
        "      <td>1496</td>\n",
        "      <td>1500</td>\n",
-       "      <td>186</td>\n",
+       "      <td>157</td>\n",
        "      <td>3</td>\n",
        "      <td>5</td>\n",
        "      <td>10</td>\n",
@@ -1172,7 +1178,7 @@
        "      <td>2</td>\n",
        "      <td>1439</td>\n",
        "      <td>1454</td>\n",
-       "      <td>261</td>\n",
+       "      <td>350</td>\n",
        "      <td>3</td>\n",
        "      <td>20</td>\n",
        "      <td>0</td>\n",
@@ -1186,7 +1192,7 @@
        "      <td>2</td>\n",
        "      <td>1523</td>\n",
        "      <td>1469</td>\n",
-       "      <td>152</td>\n",
+       "      <td>51</td>\n",
        "      <td>5</td>\n",
        "      <td>30</td>\n",
        "      <td>3</td>\n",
@@ -1214,7 +1220,7 @@
        "      <td>2</td>\n",
        "      <td>1691</td>\n",
        "      <td>1220</td>\n",
-       "      <td>168</td>\n",
+       "      <td>169</td>\n",
        "      <td>2</td>\n",
        "      <td>10</td>\n",
        "      <td>10</td>\n",
@@ -1228,7 +1234,7 @@
        "      <td>1</td>\n",
        "      <td>1233</td>\n",
        "      <td>1196</td>\n",
-       "      <td>3</td>\n",
+       "      <td>328</td>\n",
        "      <td>2</td>\n",
        "      <td>10</td>\n",
        "      <td>0</td>\n",
@@ -1242,7 +1248,7 @@
        "      <td>2</td>\n",
        "      <td>1219</td>\n",
        "      <td>1286</td>\n",
-       "      <td>279</td>\n",
+       "      <td>15</td>\n",
        "      <td>3</td>\n",
        "      <td>10</td>\n",
        "      <td>0</td>\n",
@@ -1256,7 +1262,7 @@
        "      <td>2</td>\n",
        "      <td>1360</td>\n",
        "      <td>1227</td>\n",
-       "      <td>353</td>\n",
+       "      <td>100</td>\n",
        "      <td>4</td>\n",
        "      <td>10</td>\n",
        "      <td>0</td>\n",
@@ -1270,7 +1276,7 @@
        "      <td>1</td>\n",
        "      <td>1235</td>\n",
        "      <td>1339</td>\n",
-       "      <td>279</td>\n",
+       "      <td>15</td>\n",
        "      <td>3</td>\n",
        "      <td>10</td>\n",
        "      <td>0</td>\n",
@@ -1295,17 +1301,17 @@
        "20057      1  1.499643e+12     78               1       1          1235   \n",
        "\n",
        "       black_rating  opening_eco  opening_ply  limit  increment  \n",
-       "0              1191           25            5     15          2  \n",
-       "1              1261          159            4      5         10  \n",
-       "2              1500          186            3      5         10  \n",
-       "3              1454          261            3     20          0  \n",
-       "4              1469          152            5     30          3  \n",
+       "0              1191          340            5     15          2  \n",
+       "1              1261          339            4      5         10  \n",
+       "2              1500          157            3      5         10  \n",
+       "3              1454          350            3     20          0  \n",
+       "4              1469           51            5     30          3  \n",
        "...             ...          ...          ...    ...        ...  \n",
-       "20053          1220          168            2     10         10  \n",
-       "20054          1196            3            2     10          0  \n",
-       "20055          1286          279            3     10          0  \n",
-       "20056          1227          353            4     10          0  \n",
-       "20057          1339          279            3     10          0  \n",
+       "20053          1220          169            2     10         10  \n",
+       "20054          1196          328            2     10          0  \n",
+       "20055          1286           15            3     10          0  \n",
+       "20056          1227          100            4     10          0  \n",
+       "20057          1339           15            3     10          0  \n",
        "\n",
        "[20058 rows x 11 columns]"
       ]
@@ -1354,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1370,7 +1376,7 @@
        "Counter({2: 6620})"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1388,7 +1394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1404,7 +1410,7 @@
        "Counter({2: 6620})"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1421,23 +1427,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5885196374622357\n"
+      "0.5814199395770393\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "Counter({1: 2935, 2: 3404, 0: 281})"
+       "Counter({2: 3479, 1: 2865, 0: 276})"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1454,23 +1460,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.613595166163142\n"
+      "0.6216012084592145\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "Counter({1: 3015, 2: 3316, 0: 289})"
+       "Counter({2: 3268, 1: 3057, 0: 295})"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1494,14 +1500,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'C': 9, 'penalty': 'l1', 'solver': 'liblinear'}\n"
+      "{'C': 8, 'penalty': 'l1', 'solver': 'liblinear'}\n"
      ]
     }
    ],
@@ -1526,29 +1532,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6675226586102719\n"
+      "0.6670694864048339\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "Counter({2: 3709, 1: 2633, 0: 278})"
+       "Counter({2: 3715, 1: 2628, 0: 277})"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "LR_optimal = LogisticRegression(C = 9, penalty = 'l1', solver='liblinear').fit(X_train, y_train)\n",
+    "LR_optimal = LogisticRegression(C = 8, penalty = 'l1', solver='liblinear').fit(X_train, y_train)\n",
     "y_pred_LR_optimal = LR_optimal.predict(X_test)\n",
     "score = accuracy_score(y_test, y_pred_LR_optimal)\n",
     "print(score)\n",
@@ -1564,7 +1570,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'criterion': 'gini', 'max_depth': 8, 'min_samples_leaf': 1, 'min_samples_split': 3}\n"
+      "{'criterion': 'gini', 'max_depth': 8, 'min_samples_leaf': 1, 'min_samples_split': 6}\n"
      ]
     }
    ],
@@ -1590,29 +1596,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6503021148036254\n"
+      "0.6490936555891239\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "Counter({2: 3233, 1: 3101, 0: 286})"
+       "Counter({2: 3234, 1: 3102, 0: 284})"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "DT_optimal = DecisionTreeClassifier(criterion = 'gini', max_depth = 8, min_samples_leaf = 1, min_samples_split = 3)\n",
+    "DT_optimal = DecisionTreeClassifier(criterion = 'gini', max_depth = 8, min_samples_leaf = 1, min_samples_split = 6)\n",
     "DT_optimal.fit(X_train, y_train)\n",
     "y_pred_DT_optimal = DT_optimal.predict(X_test)\n",
     "score = accuracy_score(y_test, y_pred_DT_optimal)\n",
@@ -1644,23 +1650,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6256797583081571\n"
+      "0.620392749244713\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "Counter({2: 3585, 1: 2771, 0: 264})"
+       "Counter({2: 3651, 1: 2706, 0: 263})"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
