--- a/chess.ipynb
+++ b/chess.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
        "2   King's Pawn Game: Leonardis Variation            3  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
        "<AxesSubplot: >"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
        "0.029484289873009637"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +672,7 @@
        "[20058 rows x 3 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +714,7 @@
        " (11, 98)]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -743,13 +743,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Как шахматист со стажем заявляю, что датасет сомнетельный, поскольку 90% шахматистов играют \"bullit\" 1+0\n",
+    "Как шахматист со стажем заявляю, что датасет сомнетельный, поскольку 90% шахматистов на самом деле играют только \"bullet\" 1+0\n",
     "![title](https://r3.mt.ru/r5/photo29D5/20280393772-0/jpg/bp.jpeg)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1061,7 +1061,7 @@
        "[20058 rows x 13 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1089,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1136,7 +1136,7 @@
        "      <td>2</td>\n",
        "      <td>1500</td>\n",
        "      <td>1191</td>\n",
-       "      <td>340</td>\n",
+       "      <td>245</td>\n",
        "      <td>5</td>\n",
        "      <td>15</td>\n",
        "      <td>2</td>\n",
@@ -1150,7 +1150,7 @@
        "      <td>1</td>\n",
        "      <td>1322</td>\n",
        "      <td>1261</td>\n",
-       "      <td>339</td>\n",
+       "      <td>280</td>\n",
        "      <td>4</td>\n",
        "      <td>5</td>\n",
        "      <td>10</td>\n",
@@ -1164,7 +1164,7 @@
        "      <td>2</td>\n",
        "      <td>1496</td>\n",
        "      <td>1500</td>\n",
-       "      <td>157</td>\n",
+       "      <td>208</td>\n",
        "      <td>3</td>\n",
        "      <td>5</td>\n",
        "      <td>10</td>\n",
@@ -1178,7 +1178,7 @@
        "      <td>2</td>\n",
        "      <td>1439</td>\n",
        "      <td>1454</td>\n",
-       "      <td>350</td>\n",
+       "      <td>260</td>\n",
        "      <td>3</td>\n",
        "      <td>20</td>\n",
        "      <td>0</td>\n",
@@ -1192,7 +1192,7 @@
        "      <td>2</td>\n",
        "      <td>1523</td>\n",
        "      <td>1469</td>\n",
-       "      <td>51</td>\n",
+       "      <td>53</td>\n",
        "      <td>5</td>\n",
        "      <td>30</td>\n",
        "      <td>3</td>\n",
@@ -1220,7 +1220,7 @@
        "      <td>2</td>\n",
        "      <td>1691</td>\n",
        "      <td>1220</td>\n",
-       "      <td>169</td>\n",
+       "      <td>93</td>\n",
        "      <td>2</td>\n",
        "      <td>10</td>\n",
        "      <td>10</td>\n",
@@ -1234,7 +1234,7 @@
        "      <td>1</td>\n",
        "      <td>1233</td>\n",
        "      <td>1196</td>\n",
-       "      <td>328</td>\n",
+       "      <td>7</td>\n",
        "      <td>2</td>\n",
        "      <td>10</td>\n",
        "      <td>0</td>\n",
@@ -1248,7 +1248,7 @@
        "      <td>2</td>\n",
        "      <td>1219</td>\n",
        "      <td>1286</td>\n",
-       "      <td>15</td>\n",
+       "      <td>258</td>\n",
        "      <td>3</td>\n",
        "      <td>10</td>\n",
        "      <td>0</td>\n",
@@ -1262,7 +1262,7 @@
        "      <td>2</td>\n",
        "      <td>1360</td>\n",
        "      <td>1227</td>\n",
-       "      <td>100</td>\n",
+       "      <td>264</td>\n",
        "      <td>4</td>\n",
        "      <td>10</td>\n",
        "      <td>0</td>\n",
@@ -1276,7 +1276,7 @@
        "      <td>1</td>\n",
        "      <td>1235</td>\n",
        "      <td>1339</td>\n",
-       "      <td>15</td>\n",
+       "      <td>258</td>\n",
        "      <td>3</td>\n",
        "      <td>10</td>\n",
        "      <td>0</td>\n",
@@ -1301,22 +1301,22 @@
        "20057      1  1.499643e+12     78               1       1          1235   \n",
        "\n",
        "       black_rating  opening_eco  opening_ply  limit  increment  \n",
-       "0              1191          340            5     15          2  \n",
-       "1              1261          339            4      5         10  \n",
-       "2              1500          157            3      5         10  \n",
-       "3              1454          350            3     20          0  \n",
-       "4              1469           51            5     30          3  \n",
+       "0              1191          245            5     15          2  \n",
+       "1              1261          280            4      5         10  \n",
+       "2              1500          208            3      5         10  \n",
+       "3              1454          260            3     20          0  \n",
+       "4              1469           53            5     30          3  \n",
        "...             ...          ...          ...    ...        ...  \n",
-       "20053          1220          169            2     10         10  \n",
-       "20054          1196          328            2     10          0  \n",
-       "20055          1286           15            3     10          0  \n",
-       "20056          1227          100            4     10          0  \n",
-       "20057          1339           15            3     10          0  \n",
+       "20053          1220           93            2     10         10  \n",
+       "20054          1196            7            2     10          0  \n",
+       "20055          1286          258            3     10          0  \n",
+       "20056          1227          264            4     10          0  \n",
+       "20057          1339          258            3     10          0  \n",
        "\n",
        "[20058 rows x 11 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1337,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1350,7 +1350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1360,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1376,7 +1376,7 @@
        "Counter({2: 6620})"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1394,7 +1394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1410,7 +1410,7 @@
        "Counter({2: 6620})"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1427,23 +1427,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5814199395770393\n"
+      "0.588821752265861\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "Counter({2: 3479, 1: 2865, 0: 276})"
+       "Counter({2: 3457, 1: 2895, 0: 268})"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1679,6 +1679,132 @@
     "score = accuracy_score(y_test, y_pred_kn_optimal)\n",
     "print(score)\n",
     "Counter(y_pred_kn_optimal)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Попробуем как-то учитывать стстистику игр каждого шахматиста"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique white players: 9438\n",
+      "Unique black players: 9331\n",
+      "Total games count: 20058\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Unique white players:', df['white_id'].nunique())\n",
+    "print('Unique black players:', df['black_id'].nunique())\n",
+    "print('Total games count:', len(df['black_id'].tolist()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "То есть на каждого игрока приходится по 2-3 игры. Выясним это более точно"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "white_id\n",
+       "--jim--                1\n",
+       "-l-_jedi_knight_-l-    6\n",
+       "-mati-                 1\n",
+       "-pavel-                1\n",
+       "1063314                1\n",
+       "                      ..\n",
+       "zynko                  4\n",
+       "zzeecco                1\n",
+       "zztopillo              1\n",
+       "zzzbbb                 1\n",
+       "zzzimon                1\n",
+       "Length: 9438, dtype: int64"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby(['white_id']).size()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "То есть, к сожалению, датасет не ползволяет сделать учет этой статистики. Поэтому просто попробуем использовать бустинг"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import xgboost as xgb\n",
+    "from xgboost import XGBClassifier\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import RepeatedStratifiedKFold"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8812688821752266\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Counter({2: 3350, 1: 2983, 0: 287})"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "XGBC = XGBClassifier()\n",
+    "XGBC.fit(X_train, y_train)\n",
+    "# предсказываем\n",
+    "y_XGBC = XGBC.predict(X_test)\n",
+    "score = accuracy_score(y_test, y_XGBC)\n",
+    "print(score)\n",
+    "Counter(y_XGBC)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Это уже гораздо лучше!"
    ]
   }
  ],
