final v2.0 GB has been added

--- a/chess.ipynb
+++ b/chess.ipynb
@@ -1804,7 +1804,73 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Это уже гораздо лучше!"
+    "Это уже гораздо лучше!\n",
+    "\n",
+    "Еще немного экспериментов:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CV accuracy: 0.872 (+/- 0.006)\n",
+      "0.8838368580060423\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Counter({2: 3342, 1: 2992, 0: 286})"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from numpy import mean\n",
+    "from numpy import std\n",
+    "from sklearn.datasets import make_classification\n",
+    "from lightgbm import LGBMClassifier\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import RepeatedStratifiedKFold\n",
+    "# определяем датасет\n",
+    "\n",
+    "LGBMC = LGBMClassifier()\n",
+    "#cv = RepeatedStratifiedKFold(n_splits=10, n_repeats=3, random_state=41)\n",
+    "n_scores = cross_val_score(LGBMC, X_train, y_train, scoring='accuracy', cv=5)\n",
+    "print('CV accuracy: %.3f (+/- %.3f)' % (mean(n_scores), std(n_scores)))\n",
+    "LGBMC = LGBMClassifier()\n",
+    "LGBMC.fit(X_train, y_train)\n",
+    "# предсказываем\n",
+    "y_LGBMC = LGBMC.predict(X_test)\n",
+    "score = accuracy_score(y_test, y_LGBMC)\n",
+    "print(score)\n",
+    "Counter(y_LGBMC)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Получить точность выше не вышло, так что удовлетвоимся этим."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Выводы**\n",
+    "\n",
+    "Для данной задачи лучшим решением оказался градиентный бустинг, тем не менее, оптимального решения найти не удалось. \n",
+    "\n",
+    "Это объясняется тем, что для полнеценного анализа шахманой партии и предсказания победителя необходима статистика каждого игрока: его статистика по дебютам, по игре в миттельшпиле и эндшпиле, по времени, которое он тратит на ход в среднем и многое другое."
    ]
   }
  ],
