--- a/chess.ipynb
+++ b/chess.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "Датасет: https://www.kaggle.com/datasets/datasnaek/chess\n",
     "\n",
-    "Задача: предсказание победителя"
+    "Задача: предсказание победителя по данным игры."
    ]
   },
   {
@@ -1811,7 +1811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1828,7 +1828,7 @@
        "Counter({2: 3342, 1: 2992, 0: 286})"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1840,11 +1840,9 @@
     "from lightgbm import LGBMClassifier\n",
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.model_selection import RepeatedStratifiedKFold\n",
-    "# определяем датасет\n",
     "\n",
     "LGBMC = LGBMClassifier()\n",
-    "#cv = RepeatedStratifiedKFold(n_splits=10, n_repeats=3, random_state=41)\n",
-    "n_scores = cross_val_score(LGBMC, X_train, y_train, scoring='accuracy', cv=5)\n",
+    "n_scores = cross_val_score(LGBMC, X_train, y_train, scoring='accuracy', cv=5) # немного кросс-валидации\n",
     "print('CV accuracy: %.3f (+/- %.3f)' % (mean(n_scores), std(n_scores)))\n",
     "LGBMC = LGBMClassifier()\n",
     "LGBMC.fit(X_train, y_train)\n",
